# desafio-FIESC

./: README.md
questao02/: Dockerfile  README.md
questao02/src/pacote01/: package.xml  setup.cfg  setup.py
questao02/src/pacote01/pacote01/: publish_memory.py
questao03/pyt-decrypt/: .gitignore  README.md  pyproject.toml
questao03/pyt-decrypt/pyt_decrypt/: decrypt.py
questao03/pyt-decrypt/tests/: test_decrypt.py
